--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,7 @@
 [env:ttgo-lora32-v2]
 platform = espressif32
+board_build.f_cpu = 240000000L
+board_build.f_flash = 80000000L
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
