first i2s with correct length

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,3 +7,4 @@ framework = arduino
 monitor_speed = 115200
 build_flags = 
     -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+    -D LOG_LOCAL_LEVEL=ESP_LOG_DEBUG
